Fix word-wrap issue

--- a/src/amo/components/App/styles.scss
+++ b/src/amo/components/App/styles.scss
@@ -31,11 +31,12 @@ textarea {
 *::before,
 *::after {
   box-sizing: inherit;
+  // This is needed for Safari, which does not support `anywhere`.
+  // stylelint-disable order/properties-alphabetical-order
+  word-break: break-word;
   // We use `anywhere` instead of `break-word` so that it works even when the
   // container does not have a well-defined width.
   overflow-wrap: anywhere;
-  // This is needed for Safari, which does not support `anywhere`.
-  word-wrap: break-word;
 }
 
 body {
